<resources>
    <string name="app_name">Mobile Development - Exam</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Navigation -->
    <string name="recipesFragment">This is the recipes fragment</string>
    <string name="favoritesFragment">This is the favorites fragment</string>
    <string name="infoFragment">Information Page:</string>

    <!-- Bottom Navigation -->
    <string name="recipesMenu">Recipes</string>
    <string name="favoritesMenu">Favorites</string>
    <string name="informationMenu">Information</string>

    <!-- No Signal -->
    <string name="noSignalText">It appears that you\'re offline.</string>

    <!-- Links -->
    <string name="GITHUB_URL">"https://github.com/AkosoCodes"</string>
    <string name="LINKEDIN_URL">"https://www.linkedin.com/in/andrijas21/"</string>
    <string name="INSTAGRAM_URL">"https://www.instagram.com/andrija_s21/"</string>
    <string name="API_URL">"https://spoonacular.com/"</string>

    <!--  Chips  -->
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="diet_type">Diet Type</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="keto">Keto</string>
    <string name="vegan">Vegan</string>
    <string name="primal">Primal</string>
    <string name="apply">APPLY</string>
    <string name="search">Search</string>
    <string name="search_by_id">Search by ID</string>
    <string name="go_back">Go Back</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="add_to_favorites">Add to Favorites</string>
</resources>