<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/recipesFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/recipesMenu"
        android:icon="@drawable/food" />
        />

    <item
        android:id="@+id/favoritesFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/favoritesMenu"
        android:icon="@drawable/star"
        />
    <item
        android:id="@+id/informationFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/informationMenu"
        android:icon="@drawable/info"
        />
</menu>